ntp: Patch to fix false positives on 32bit systems

See: https://bugzilla.kernel.org/show_bug.cgi?id=92481